--- a/datalab/Untitled Notebook.ipynb
+++ b/datalab/Untitled Notebook.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 45289.67578125]\n",
+      "[[ 40470.34375   ]\n",
       " [ 48187.05078125]\n",
       " [ 49574.6328125 ]]\n"
      ]
@@ -285,7 +285,7 @@
    "source": [
     "input = pd.DataFrame.from_dict(data = \n",
     "                               {'dayofweek' : [4, 5, 6],\n",
-    "                                'mintemp' : [50, 36, 54],\n",
+    "                                'mintemp' : [5, 36, 54],\n",
     "                                'maxtemp' : [80, 40, 75],\n",
     "                                'rain' : [0, 0.8, 0.3]})\n",
     "with tf.Session() as sess:\n",
@@ -298,6 +298,40 @@
     "        feature_data : input.values\n",
     "      })\n",
     "    print predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqsv\" id=\"2_146680575454\"></div>\n",
+       "    <script>\n",
+       "      require(['extensions/bigquery', 'element!2_146680575454', 'style!/static/extensions/bigquery.css'],\n",
+       "        function(bq, dom) {\n",
+       "          bq.renderSchema(dom, [{\"type\": \"TIMESTAMP\", \"name\": \"pickup_datetime\", \"mode\": \"NULLABLE\"}, {\"type\": \"TIMESTAMP\", \"name\": \"dropoff_datetime\", \"mode\": \"NULLABLE\"}, {\"type\": \"STRING\", \"name\": \"store_and_fwd_flag\", \"mode\": \"NULLABLE\"}, {\"type\": \"INTEGER\", \"name\": \"rate_code\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"pickup_longitude\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"pickup_latitude\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"dropoff_longitude\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"dropoff_latitude\", \"mode\": \"NULLABLE\"}, {\"type\": \"INTEGER\", \"name\": \"passenger_count\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"trip_distance\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"fare_amount\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"extra\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"mta_tax\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"tip_amount\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"tolls_amount\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"ehail_fee\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"total_amount\", \"mode\": \"NULLABLE\"}, {\"type\": \"INTEGER\", \"name\": \"payment_type\", \"mode\": \"NULLABLE\"}, {\"type\": \"FLOAT\", \"name\": \"distance_between_service\", \"mode\": \"NULLABLE\"}, {\"type\": \"INTEGER\", \"name\": \"time_between_service\", \"mode\": \"NULLABLE\"}, {\"type\": \"INTEGER\", \"name\": \"trip_type\", \"mode\": \"NULLABLE\"}]);\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery schema --table \"nyc-tlc:green.trips_2015\""
    ]
   },
   {
