--- a/datalab/Untitled Notebook.ipynb
+++ b/datalab/Untitled Notebook.ipynb
@@ -414,6 +414,334 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%sql --module wxquery\n",
+    "SELECT DAYOFYEAR(TIMESTAMP('$YEAR'+mo+da)) daynumber,\n",
+    "       FIRST(DAYOFWEEK(TIMESTAMP('$YEAR'+mo+da))) dayofweek,\n",
+    "       MIN(min) mintemp, MAX(max) maxtemp, MAX(IF(prcp=99.99,0,prcp)) rain\n",
+    "FROM [fh-bigquery:weather_gsod.gsod$YEAR]\n",
+    "WHERE stn='725030' GROUP BY 1 ORDER BY daynumber DESC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "weather = bq.Query(wxquery, YEAR=2015).to_dataframe()\n",
+    "data = pd.merge(weather, trips, on='daynumber')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "weather = bq.Query(wxquery, YEAR=2014).to_dataframe()\n",
+    "data2014 = pd.merge(weather, trips, on='daynumber')\n",
+    "data2 = pd.concat([data, data2014])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "weather = bq.Query(wxquery, YEAR=2013).to_dataframe()\n",
+    "data2013 = pd.merge(weather, trips, on='daynumber')\n",
+    "data3 = pd.concat([data2, data2013])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daynumber</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>mintemp</th>\n",
+       "      <th>maxtemp</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>numtrips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>365</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>2668294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>364</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>2494007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>363</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>46.9</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2415137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>2155247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>361</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1815101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   daynumber  dayofweek  mintemp  maxtemp  rain  numtrips\n",
+       "0        365          5     46.0     48.2  0.17   2668294\n",
+       "1        364          4     34.0     48.0  0.13   2494007\n",
+       "2        363          3     33.8     46.9  0.37   2415137\n",
+       "3        362          2     39.0     62.1  0.02   2155247\n",
+       "4        361          1     46.0     62.6  0.14   1815101"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2[:5\n",
+    "     ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daynumber</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>mintemp</th>\n",
+       "      <th>maxtemp</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>numtrips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>365</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>2668294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>364</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>2494007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>363</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>46.9</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2415137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>2155247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>361</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1815101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   daynumber  dayofweek  mintemp  maxtemp  rain  numtrips\n",
+       "0        365          5     46.0     48.2  0.17   2668294\n",
+       "1        364          4     34.0     48.0  0.13   2494007\n",
+       "2        363          3     33.8     46.9  0.37   2415137\n",
+       "3        362          2     39.0     62.1  0.02   2155247\n",
+       "4        361          1     46.0     62.6  0.14   1815101"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data3[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daynumber</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>mintemp</th>\n",
+       "      <th>maxtemp</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>numtrips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>365</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>2668294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>364</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>2494007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>363</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>46.9</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2415137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>2155247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>361</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1815101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   daynumber  dayofweek  mintemp  maxtemp  rain  numtrips\n",
+       "0        365          5     46.0     48.2  0.17   2668294\n",
+       "1        364          4     34.0     48.0  0.13   2494007\n",
+       "2        363          3     33.8     46.9  0.37   2415137\n",
+       "3        362          2     39.0     62.1  0.02   2155247\n",
+       "4        361          1     46.0     62.6  0.14   1815101"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
