--- a/datalab/Untitled Notebook1.ipynb
+++ b/datalab/Untitled Notebook1.ipynb
@@ -1,6 +1,323 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import gcp.bigquery as bq\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqsv\" id=\"1_146680663568\"></div>\n",
+       "    <script>\n",
+       "      require(['extensions/bigquery', 'element!1_146680663568', 'style!/static/extensions/bigquery.css'],\n",
+       "        function(bq, dom) {\n",
+       "          bq.renderSchema(dom, [{\"description\": \"A designation for the technology vendor that provided the record.\\nCMT=Creative Mobile Technologies\\nVTS= VeriFone, Inc.\\nDDS=Digital Dispatch Systems\", \"type\": \"STRING\", \"name\": \"vendor_id\", \"mode\": \"NULLABLE\"}, {\"description\": \"The date and time when the meter was engaged.\", \"type\": \"TIMESTAMP\", \"name\": \"pickup_datetime\", \"mode\": \"NULLABLE\"}, {\"description\": \"The date and time when the meter was disengaged.\", \"type\": \"TIMESTAMP\", \"name\": \"dropoff_datetime\", \"mode\": \"NULLABLE\"}, {\"description\": \"Longitude where the meter was engaged.\", \"type\": \"FLOAT\", \"name\": \"pickup_longitude\", \"mode\": \"NULLABLE\"}, {\"description\": \"Latitude where the meter was engaged.\", \"type\": \"FLOAT\", \"name\": \"pickup_latitude\", \"mode\": \"NULLABLE\"}, {\"description\": \"Longitude where the meter was disengaged.\", \"type\": \"FLOAT\", \"name\": \"dropoff_longitude\", \"mode\": \"NULLABLE\"}, {\"description\": \"Latitude where the meter was disengaged.\", \"type\": \"FLOAT\", \"name\": \"dropoff_latitude\", \"mode\": \"NULLABLE\"}, {\"description\": \"The final rate code in effect at the end of the trip.\\n1= Standard rate\\n2=JFK\\n3=Newark\\n4=Nassau or Westchester\\n5=Negotiated fare\\n6=Group ride\", \"type\": \"STRING\", \"name\": \"rate_code\", \"mode\": \"NULLABLE\"}, {\"description\": \"The number of passengers in the vehicle.  \\n\\nThis is a driver-entered value.\", \"type\": \"INTEGER\", \"name\": \"passenger_count\", \"mode\": \"NULLABLE\"}, {\"description\": \"The elapsed trip distance in miles reported by the taximeter.\", \"type\": \"FLOAT\", \"name\": \"trip_distance\", \"mode\": \"NULLABLE\"}, {\"description\": \"A numeric code signifying how the passenger paid for the trip. \\nCRD= Credit card\\nCSH= Cash\\nNOC= No charge\\nDIS= Dispute\\nUNK= Unknown\", \"type\": \"STRING\", \"name\": \"payment_type\", \"mode\": \"NULLABLE\"}, {\"description\": \"The time-and-distance fare calculated by the meter.\", \"type\": \"FLOAT\", \"name\": \"fare_amount\", \"mode\": \"NULLABLE\"}, {\"description\": \"Miscellaneous extras and surcharges.  Currently, this only includes the $0.50 and $1 rush hour and overnight charges.\", \"type\": \"FLOAT\", \"name\": \"extra\", \"mode\": \"NULLABLE\"}, {\"description\": \"$0.50 MTA tax that is automatically triggered based on the metered rate in use.\", \"type\": \"FLOAT\", \"name\": \"mta_tax\", \"mode\": \"NULLABLE\"}, {\"description\": \"$0.30 improvement surcharge assessed on trips at the flag drop. The improvement surcharge began being levied in 2015.\", \"type\": \"FLOAT\", \"name\": \"imp_surcharge\", \"mode\": \"NULLABLE\"}, {\"description\": \"Tip amount \\u2013 This field is automatically populated for credit card tips. Cash tips are not included.\", \"type\": \"FLOAT\", \"name\": \"tip_amount\", \"mode\": \"NULLABLE\"}, {\"description\": \"Total amount of all tolls paid in trip.\", \"type\": \"FLOAT\", \"name\": \"tolls_amount\", \"mode\": \"NULLABLE\"}, {\"description\": \"The total amount charged to passengers. Does not include cash tips.\", \"type\": \"FLOAT\", \"name\": \"total_amount\", \"mode\": \"NULLABLE\"}, {\"description\": \"This flag indicates whether the trip record was held in vehicle memory before sending to the vendor, aka \\u201cstore and forward,\\u201d because the vehicle did not have a connection to the server. \\nY= store and forward trip\\nN= not a store and forward trip\", \"type\": \"STRING\", \"name\": \"store_and_fwd_flag\", \"mode\": \"NULLABLE\"}]);\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery schema --table \"nyc-tlc:yellow.trips\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%sql --module taxiquery\n",
+    "SELECT daynumber, COUNT(*) AS numtrips FROM\n",
+    "    (SELECT DAYOFYEAR(pickup_datetime) AS daynumber FROM [nyc-tlc:yellow.trips])\n",
+    "GROUP BY daynumber ORDER BY daynumber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trips = bq.Query(taxiquery).to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%sql --module wxquery\n",
+    "SELECT DAYOFYEAR(TIMESTAMP('$YEAR'+mo+da)) daynumber,\n",
+    "       FIRST(DAYOFWEEK(TIMESTAMP('$YEAR'+mo+da))) dayofweek,\n",
+    "       MIN(min) mintemp, MAX(max) maxtemp, MAX(IF(prcp=99.99,0,prcp)) rain\n",
+    "FROM [fh-bigquery:weather_gsod.gsod$YEAR]\n",
+    "WHERE stn='725030' GROUP BY 1 ORDER BY daynumber DESC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "weather = bq.Query(wxquery, YEAR=2015).to_dataframe()\n",
+    "data = pd.merge(weather, trips, on='daynumber')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daynumber</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>mintemp</th>\n",
+       "      <th>maxtemp</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>numtrips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>365</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>2668294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>364</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>2494007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>363</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>46.9</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2415137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>2155247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>361</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1815101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>360</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>1630893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>359</td>\n",
+       "      <td>6</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1491734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>358</td>\n",
+       "      <td>5</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>2203949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>357</td>\n",
+       "      <td>4</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>2642256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>356</td>\n",
+       "      <td>3</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2760196</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   daynumber  dayofweek  mintemp  maxtemp  rain  numtrips\n",
+       "0        365          5     46.0     48.2  0.17   2668294\n",
+       "1        364          4     34.0     48.0  0.13   2494007\n",
+       "2        363          3     33.8     46.9  0.37   2415137\n",
+       "3        362          2     39.0     62.1  0.02   2155247\n",
+       "4        361          1     46.0     62.6  0.14   1815101\n",
+       "5        360          7     50.0     64.0  0.03   1630893\n",
+       "6        359          6     54.0     72.0  0.01   1491734\n",
+       "7        358          5     50.0     72.0  1.46   2203949\n",
+       "8        357          4     50.0     62.1  0.18   2642256\n",
+       "9        356          3     55.0     62.6  0.00   2760196"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'length'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-be2c0fe0f600>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlength\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   2667\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2668\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2669\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2670\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2671\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'length'"
+     ]
+    }
+   ],
+   "source": [
+    "data.length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2190"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
