--- a/datalab/Untitled Notebook1.ipynb
+++ b/datalab/Untitled Notebook1.ipynb
@@ -1017,14 +1017,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "shuffled = data2.sample(frac=1)\n",
+    "shuffled = data4.sample(frac=1)\n",
     "# It would be a good idea, if we had more data, to treat the days as categorical variables\n",
     "# with the small amount of data, we have though, the model tends to overfit\n",
     "#predictors = shuffled.iloc[:,2:5]\n",
@@ -1034,6 +1034,120 @@
     "#  predictors.loc[~matching, 'day_' + str(day)] = 0\n",
     "predictors = shuffled.iloc[:,1:5]\n",
     "targets = shuffled.iloc[:,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 error=2090106.4114\n",
+      "1000 error=1284109.71411\n",
+      "2000 error=686557.87471\n",
+      "3000 error=674964.527193\n",
+      "4000 error=663185.671246\n",
+      "5000 error=645210.971277\n",
+      "6000 error=617964.728008\n",
+      "7000 error=577077.813781\n",
+      "8000 error=522702.369372\n",
+      "9000 error=473046.796522\n",
+      "Model written to /tmp/trained_model-10000\n",
+      "testerror=467331.510363\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCALE_NUM_TRIPS = 100000\n",
+    "trainsize = int(len(shuffled['numtrips']) * 0.8)\n",
+    "testsize = len(shuffled['numtrips']) - trainsize\n",
+    "npredictors = len(predictors.columns)\n",
+    "noutputs = 1\n",
+    "nhidden = 5\n",
+    "numiter = 10000\n",
+    "modelfile = '/tmp/trained_model'\n",
+    "with tf.Session() as sess:\n",
+    "  feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "  target_data = tf.placeholder(\"float\", [None, noutputs])\n",
+    "  weights1 = tf.Variable(tf.truncated_normal([npredictors, nhidden], stddev=0.01))\n",
+    "  weights2 = tf.Variable(tf.truncated_normal([nhidden, noutputs], stddev=0.01))\n",
+    "  biases1 = tf.Variable(tf.ones([nhidden]))\n",
+    "  biases2 = tf.Variable(tf.ones([noutputs]))\n",
+    "  model = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "  cost = tf.nn.l2_loss(model - target_data)\n",
+    "  training_step = tf.train.AdamOptimizer(learning_rate=0.0001).minimize(cost)\n",
+    "  init = tf.initialize_all_variables()\n",
+    "  sess.run(init)\n",
+    "\n",
+    "  saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "  for iter in xrange(0, numiter):\n",
+    "    sess.run(training_step, feed_dict = {\n",
+    "        feature_data : predictors[:trainsize].values,\n",
+    "        target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      })\n",
+    "    \n",
+    "    if iter%1000 == 0:\n",
+    "      print '{0} error={1}'.format(iter, np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[:trainsize].values,\n",
+    "          target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      }) / trainsize))\n",
+    "    \n",
+    "  filename = saver.save(sess, modelfile, global_step=numiter)\n",
+    "  print 'Model written to {0}'.format(filename)\n",
+    "\n",
+    "  print 'testerror={0}'.format(np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[trainsize:].values,\n",
+    "          target_data : targets[trainsize:].values.reshape(testsize, noutputs)\n",
+    "      }) / testsize))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  554940.0625]\n",
+      " [ 1693998.125 ]\n",
+      " [ 1112604.125 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = pd.DataFrame.from_dict(data = \n",
+    "                               {'dayofweek' : [4, 5, 6],\n",
+    "                                'mintemp' : [50, 36, 54],\n",
+    "                                'maxtemp' : [80, 40, 75],\n",
+    "                                'rain' : [1, 0.8, 0.3]})\n",
+    "with tf.Session() as sess:\n",
+    "    filename = modelfile + '-' + str(numiter)\n",
+    "    saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "    saver.restore(sess, filename)\n",
+    "    feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "    predict_operation = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "    predicted = sess.run(predict_operation, feed_dict = {\n",
+    "        feature_data : input.values\n",
+    "      })\n",
+    "    print predicted"
    ]
   },
   {
