--- a/datalab/Untitled Notebook1.ipynb
+++ b/datalab/Untitled Notebook1.ipynb
@@ -1152,6 +1152,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  554940.0625]\n",
+      " [ 1693998.125 ]\n",
+      " [ 1112604.125 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = pd.DataFrame.from_dict(data = \n",
+    "                               {'dayofweek' : [4, 5, 6],\n",
+    "                                'mintemp' : [50, 36, 54],\n",
+    "                                'maxtemp' : [80, 40, 75],\n",
+    "                                'rain' : [1, 0.8, 0.3]})\n",
+    "with tf.Session() as sess:\n",
+    "    filename = modelfile + '-' + str(numiter)\n",
+    "    saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "    saver.restore(sess, filename)\n",
+    "    feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "    predict_operation = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "    predicted = sess.run(predict_operation, feed_dict = {\n",
+    "        feature_data : input.values\n",
+    "      })\n",
+    "    print predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  554940.0625]\n",
+      " [  691931.6875]\n",
+      " [ 1112604.125 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = pd.DataFrame.from_dict(data = \n",
+    "                               {'dayofweek' : [4, 5, 6],\n",
+    "                                'mintemp' : [50, 36, 54],\n",
+    "                                'maxtemp' : [80, 60, 75],\n",
+    "                                'rain' : [1, 0.8, 0.3]})\n",
+    "with tf.Session() as sess:\n",
+    "    filename = modelfile + '-' + str(numiter)\n",
+    "    saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "    saver.restore(sess, filename)\n",
+    "    feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "    predict_operation = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "    predicted = sess.run(predict_operation, feed_dict = {\n",
+    "        feature_data : input.values\n",
+    "      })\n",
+    "    print predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "732"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trips.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daynumber</th>\n",
+       "      <th>numtrips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2340746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2385674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2759137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2872630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2969721</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   daynumber  numtrips\n",
+       "0          1   2340746\n",
+       "1          2   2385674\n",
+       "2          3   2759137\n",
+       "3          4   2872630\n",
+       "4          5   2969721"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trips[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
