--- a/datalab/Untitled Notebook.ipynb
+++ b/datalab/Untitled Notebook.ipynb
@@ -118,11 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model written to /tmp/trained_model-10000\n"
+     ]
+    }
+   ],
    "source": [
     "#invoke TensorFlow and train the neural network that will predict traffic for the next 3 days\n",
     "import tensorflow as tf\n",
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -184,9 +192,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 40134.1875    ]\n",
-      " [ 49071.07421875]\n",
-      " [ 48852.1796875 ]]\n"
+      "[[ 38722.53125   ]\n",
+      " [ 50361.9609375 ]\n",
+      " [ 51753.59765625]]\n"
      ]
     }
    ],
@@ -195,9 +203,9 @@
     "#How many taxi rides we’ll see tomorrow if expected min/max temp is 50/80 and expected rain is 0?\n",
     "input = pd.DataFrame.from_dict(data = \n",
     "                               {'dayofweek' : [4, 5, 6],\n",
-    "                                'mintemp' : [50, 36, 54],\n",
-    "                                'maxtemp' : [80, 40, 75],\n",
-    "                                'rain' : [0, 0.8, 0.3]})\n",
+    "                                'mintemp' : [20, 36, 54],\n",
+    "                                'maxtemp' : [60, 40, 75],\n",
+    "                                'rain' : [1, 0.8, 0.3]})\n",
     "with tf.Session() as sess:\n",
     "    filename = modelfile + '-' + str(numiter)\n",
     "    saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
