--- a/datalab/Traffic Prediction.ipynb
+++ b/datalab/Traffic Prediction.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 43445.4140625 ]\n",
+      "[[ 44874.2578125 ]\n",
       " [ 49276.5859375 ]\n",
       " [ 50152.28515625]]\n"
      ]
@@ -203,7 +203,7 @@
     "#How many taxi rides we’ll see tomorrow if expected min/max temp is 50/80 and expected rain is 0?\n",
     "input = pd.DataFrame.from_dict(data = \n",
     "                               {'dayofweek' : [4, 5, 6],\n",
-    "                                'mintemp' : [50, 36, 54],\n",
+    "                                'mintemp' : [55, 36, 54],\n",
     "                                'maxtemp' : [80, 40, 75],\n",
     "                                'rain' : [0, 0.8, 0.3]})\n",
     "with tf.Session() as sess:\n",
@@ -217,6 +217,15 @@
     "      })\n",
     "    print predicted"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
